--- a/build.gradle
+++ b/build.gradle
@@ -17,8 +17,8 @@ allprojects {
 dependencies {
     compile 'org.industrial-devops:titan.ccp.model:0.0.1-SNAPSHOT'
     compile 'com.sparkjava:spark-core:2.7.2'
-    //compile 'com.coreos:jetcd-core:0.0.2'
     compile 'redis.clients:jedis:2.9.0'
+    compile 'org.apache.kafka:kafka-clients:1.0.0'
     compile 'org.slf4j:slf4j-simple:1.6.1'
 
     // Use JUnit test framework
