--- a/src/main/resources/META-INF/application.properties
+++ b/src/main/resources/META-INF/application.properties
@@ -2,3 +2,5 @@ webserver.port=8082
 webserver.cors=true
 redis.host=localhost
 redis.port=6379
+kafka.bootstrap.servers=localhost:9092
+kafka.topic=configuration
