--- a/src/main/resources/META-INF/application.properties
+++ b/src/main/resources/META-INF/application.properties
@@ -1,6 +1,9 @@
 webserver.port=8082
 webserver.cors=true
+
 redis.host=localhost
 redis.port=6379
+
+event.publishing=true
 kafka.bootstrap.servers=localhost:9092
 kafka.topic=configuration
