--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,11 @@ apply plugin: 'eclipse'
 sourceCompatibility = "1.10"
 targetCompatibility = "1.10"
 
+configurations.all {
+    // Check for updates every build
+    resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
+}
+
 allprojects { 
 	repositories {
 	    jcenter()
@@ -15,7 +20,7 @@ allprojects {
 }
 
 dependencies {
-    compile 'org.industrial-devops:titan.ccp.model:0.0.1-SNAPSHOT'
+    compile('org.industrial-devops:titan.ccp.model:0.0.1-SNAPSHOT') { changing = true }
     compile 'com.sparkjava:spark-core:2.7.2'
     compile 'redis.clients:jedis:2.9.0'
     compile 'org.apache.kafka:kafka-clients:1.0.0'
