Reduce expiring time and restrict the number of artifact files

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,7 +21,10 @@ build:
   script: ./gradlew --build-cache assemble
   artifacts:
     paths:
-      - build/
+    paths:
+      - build/libs/*.jar
+      - build/distributions/*.tar
+    expire_in: 1 day
 
 test:
   stage: test
