--- a/build.gradle
+++ b/build.gradle
@@ -28,13 +28,17 @@ allprojects {
   repositories {
     jcenter()
     maven {
-      url "https://oss.sonatype.org/content/repositories/snapshots/"
+    	url 'https://oss.sonatype.org/content/repositories/snapshots/'
+    }
+    maven {
+    	url 'https://jitpack.io'
     }
   }
 }
 
 dependencies {
   compile('org.industrial-devops:titan.ccp.model:0.0.1-SNAPSHOT') { changing = true }
+  compile('com.github.cau-se:titan-ccp-common:master-SNAPSHOT') { changing = true }
   compile 'com.sparkjava:spark-core:2.7.2'
   compile 'redis.clients:jedis:2.9.0'
   compile 'org.apache.kafka:kafka-clients:1.0.0'
