--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,9 @@ allprojects {
     maven {
     	url 'https://jitpack.io'
     }
+    maven {
+    	url 'https://packages.confluent.io/maven/'
+	}
   }
 }
 
