Disable default PMD ruleset

--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,7 @@ dependencies {
 mainClassName = "titan.ccp.configuration.ConfigurationService"
 
 pmd {
+  ruleSets = [] // Gradle requires to clean the rule sets first
   ruleSetFiles = files("config/pmd.xml")
   ignoreFailures = false
   toolVersion = "6.7.0"
