Make deployment more generic

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -64,11 +64,15 @@ deploy:
   services:
     - docker:dind
   script:
+    - DOCKER_TAG_NAME=$(echo $CI_COMMIT_REF_SLUG- | sed 's/^master-$//')
     - docker build --pull -t titan-ccp-configuration .
-    - docker tag titan-ccp-configuration industrialdevops/titan-ccp-configuration:latest
-    - docker tag titan-ccp-configuration industrialdevops/titan-ccp-configuration:$(date +%Y%m%d%H%M%S)
+    - docker tag titan-ccp-configuration industrialdevops/titan-ccp-configuration:${DOCKER_TAG_NAME}latest
+    - docker tag titan-ccp-configuration industrialdevops/titan-ccp-configuration:$DOCKER_TAG_NAME$(date +%Y%m%d%H%M%S)
+    - docker tag titan-ccp-configuration industrialdevops/titan-ccp-configuration:$DOCKER_TAG_NAME$CI_COMMIT_SHA
     - echo $DOCKERHUB_PW | docker login -u $DOCKERHUB_ID --password-stdin
     - docker push industrialdevops/titan-ccp-configuration
     - docker logout
   only:
-    - master
+    variables:
+      - $DOCKERHUB_ID
+      - $DOCKERHUB_PW
