--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,7 @@ dependencies {
   compile 'redis.clients:jedis:2.9.0'
   compile 'org.apache.kafka:kafka-clients:1.0.0'
   compile 'org.slf4j:slf4j-simple:1.7.25'
+  compile 'net.jodah:failsafe:2.0.1'
 
   // Use JUnit test framework
   testCompile 'junit:junit:4.12'
