Encapsulate redis requests

--- a/src/main/resources/META-INF/application.properties
+++ b/src/main/resources/META-INF/application.properties
@@ -4,6 +4,9 @@ webserver.cors=true
 redis.host=localhost
 redis.port=6379
 
+failsafe.maxRetries=-1
+failsafe.delayInMillis=1000
+
 event.publishing=true
 kafka.bootstrap.servers=localhost:9092
 kafka.topic=configuration
