--- a/src/main/resources/META-INF/application.properties
+++ b/src/main/resources/META-INF/application.properties
@@ -4,8 +4,8 @@ webserver.cors=true
 redis.host=localhost
 redis.port=6379
 
-failsafe.maxRetries=-1
-failsafe.delayInMillis=1000
+db.maxRetries=3
+db.delayInMillis=1000
 
 event.publishing=true
 kafka.bootstrap.servers=localhost:9092
