--- a/src/main/resources/META-INF/application.properties
+++ b/src/main/resources/META-INF/application.properties
@@ -1,8 +1,8 @@
 webserver.port=8082
 webserver.cors=true
 
-redis.host=localhost
-redis.port=6379
+mongodb.host=localhost
+mongodb.port=27017
 
 db.maxRetries=10
 db.delayInMillis=1000
@@ -11,4 +11,4 @@ event.publishing=true
 kafka.bootstrap.servers=localhost:9092
 kafka.topic=configuration
 
-demo=true
+demo=false
