--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,10 @@ allprojects {
 }
 
 dependencies {
-  compile('org.industrial-devops:titan-ccp-common:0.0.1-SNAPSHOT') { changing = true }
+	compile project(':titanccp-common') // for local changes
+
+
+  //compile('org.industrial-devops:titan-ccp-common:0.0.1-SNAPSHOT') { changing = true }
   compile 'com.sparkjava:spark-core:2.7.2'
   compile 'redis.clients:jedis:2.9.0'
   compile 'org.apache.kafka:kafka-clients:1.0.0'
@@ -43,6 +46,8 @@ dependencies {
 
   // Use JUnit test framework
   testCompile 'junit:junit:4.12'
+  
+  compile 'org.mongodb:mongodb-driver-sync:3.11.1'
 }
 
 mainClassName = "titan.ccp.configuration.ConfigurationService"
