--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,7 @@ dependencies {
 
 
   //compile('org.industrial-devops:titan-ccp-common:0.0.1-SNAPSHOT') { changing = true }
+  compile 'com.google.guava:guava:20.0'
   compile 'com.sparkjava:spark-core:2.7.2'
   compile 'redis.clients:jedis:2.9.0'
   compile 'org.apache.kafka:kafka-clients:1.0.0'
@@ -47,7 +48,8 @@ dependencies {
   // Use JUnit test framework
   testCompile 'junit:junit:4.12'
   
-  compile 'org.mongodb:mongodb-driver-sync:3.11.1'
+  compile 'org.mongodb:mongodb-driver-sync:3.11.2'
+  implementation 'com.google.code.gson:gson:2.8.2'
 }
 
 mainClassName = "titan.ccp.configuration.ConfigurationService"
