--- a/src/main/resources/META-INF/application.properties
+++ b/src/main/resources/META-INF/application.properties
@@ -1,4 +1,4 @@
-webserver.port=8082
+webserver.port=80
 webserver.cors=true
 
 mongodb.host=localhost
@@ -11,4 +11,4 @@ event.publishing=true
 kafka.bootstrap.servers=localhost:9092
 kafka.topic=configuration
 
-demo=true
+demo=false
