--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,5 @@
 rootProject.name = 'titanccp-configuration'
 
-include ':titanccp-common'
-project(':titanccp-common').projectDir = new File(settingsDir, "../common") // for local changes
+// local import of titanccp-common library
+//include ':titanccp-common'
+//project(':titanccp-common').projectDir = new File(settingsDir, "../common") // for local changes
