Use MongoDB connection url in config

--- a/src/main/resources/META-INF/application.properties
+++ b/src/main/resources/META-INF/application.properties
@@ -1,8 +1,9 @@
 webserver.port=80
 webserver.cors=true
 
-mongodb.host=localhost
-mongodb.port=27017
+#mongodb.host=localhost
+#mongodb.port=27017
+mongodb.connection.url=mongodb://localhost:27017/sensorManagement?replicaSet=rs0
 
 db.maxRetries=10
 db.delayInMillis=1000
